Ignore SSL errors
Don't block PRs just because someone's SSL setup is wedged.

Signed-off-by: Joe Block <jpb@unixorn.net>

--- a/.github/workflows/awesomebot.yml
+++ b/.github/workflows/awesomebot.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: docker://dkhamsing/awesome_bot:latest
       with:
-        args: /github/workspace/Readme.md --allow 500,501,502,503,504,509,521 --allow-dupe --request-delay 1 --allow-redirect --white-list https://ipfs.io,slideshare,https://img.shields.io
+        args: /github/workspace/Readme.md --allow 500,501,502,503,504,509,521 --allow-dupe --request-delay 1 --allow-redirect --allow-ssl --white-list https://ipfs.io,slideshare,https://img.shields.io
