--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -55,6 +55,7 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_LINTERS: SPELL_CSPELL,MARKDOWN_MARKDOWN_LINK_CHECK
+          REPOSITORY_CHECKOV_DISABLE_ERRORS: true
 
       # Upload Mega-Linter artifacts.
       # They will be available on Github action page "Artifacts" section
