Update mega-linter configuration
Signed-off-by: Joe Block <jpb@unixorn.net>

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -65,5 +65,5 @@ jobs:
         with:
           name: Mega-Linter reports
           path: |
-            report
+            mega-linter-reports
             mega-linter.log
